[gd_scene load_steps=7 format=3 uid="uid://dt7ug0cn26skh"]

[ext_resource type="Script" uid="uid://cwpwrwhynvhqp" path="res://Enemy.gd" id="1_57buk"]
[ext_resource type="Texture2D" uid="uid://qx3hsk8uw0pk" path="res://assets/gnom.png" id="2_7efom"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bgkv"]
size = Vector2(44.5, 53)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m3fgy"]
bg_color = Color(0.25, 0.25, 0.25, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y5ylg"]
bg_color = Color(0.848912, 0, 0.0494145, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p52i4"]
size = Vector2(45, 53.5)

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
process_mode = 1
collision_layer = 4
collision_mask = 8
script = ExtResource("1_57buk")

[node name="dot" type="Sprite2D" parent="."]
position = Vector2(4.76837e-07, -8)
scale = Vector2(0.0494674, 0.0494674)
texture = ExtResource("2_7efom")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.75, -8.5)
shape = SubResource("RectangleShape2D_7bgkv")
one_way_collision_margin = 16.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = -22.0
offset_top = -48.0
offset_right = 29.0
offset_bottom = -40.0
theme_override_styles/background = SubResource("StyleBoxFlat_m3fgy")
theme_override_styles/fill = SubResource("StyleBoxFlat_y5ylg")
show_percentage = false

[node name="AttackZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
position = Vector2(3.5, -8.75)
shape = SubResource("RectangleShape2D_p52i4")

[connection signal="area_entered" from="AttackZone" to="." method="_on_hero_entered"]
